--- a/closeButton.html
+++ b/closeButton.html
@@ -3,19 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netmax</title>
+  <title>Close Button</title>
   <style>
-    body, html {
+    body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: transparent;
     }
     #close-btn {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 9999;
       background-color: red;
       color: white;
       border: none;
