--- a/splash.html
+++ b/splash.html
@@ -11,6 +11,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
+        position: relative;
         background-color: black;
         display: flex;
         justify-content: center;
@@ -20,9 +21,21 @@
         max-width: 50%;
         max-height: 50%;
       }
+      .logo-overlay {
+      position: absolute;
+      width: 70px; 
+      height: 70px;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     </style>
   </head>
   <body>
-    <img src="./assets/splash.jpg" alt="Загрузка..." />
+    <div class="logo-overlay">
+      <img src="./assets/images/spin_overlay_logo.png" />
+    </div>
+    <img src="./assets/images/spin.gif" alt="Загрузка..." />
   </body>
 </html>
