Исправил фон модального окна, растянул на всё родительское окно

--- a/assets/tamplates/modals/winStateModal/modal.html
+++ b/assets/tamplates/modals/winStateModal/modal.html
@@ -1,39 +1,46 @@
 <!-- modal.html -->
-<div id="WinStateModal" style="display: none;">
-    <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <div class="image-grid">
+<div class="overlay">
+    <div id="WinStateModal" style="display: none;">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <div class="image-grid">
 
-            <div class="image-placeholder">
-                <p class="image-description">Безрамочное окно с <br> перетаскиванием за хедер</p>
-                <img  alt="Image 1" class="image">
-            </div>
+                <div class="image-placeholder">
+                    <p class="image-description">Безрамочное окно с <br>
+                        перетаскиванием за хедер</p>
+                    <img alt="Image 1" class="image">
+                </div>
 
-            <div class="image-placeholder">
-                <p class="image-description">Окно с рамкой и <br> перетаскиванием за хедер</p>
-                <img  alt="Image 2" class="image">
-            </div>
+                <div class="image-placeholder">
+                    <p class="image-description">Окно с рамкой и <br>
+                        перетаскиванием за хедер</p>
+                    <img alt="Image 2" class="image">
+                </div>
 
-            <div class="image-placeholder">
-                <p class="image-description">Окно с рамкой и панелью задач. С <br> перетаскиванием за хедер</p>
-                <img  alt="Image 3" class="image">
-            </div>
+                <div class="image-placeholder">
+                    <p class="image-description">Окно с рамкой и панелью задач.
+                        С <br> перетаскиванием за хедер</p>
+                    <img alt="Image 3" class="image">
+                </div>
 
-            <div class="image-placeholder">
-                <p class="image-description">Безрамочное окно с перетаскиванием <br> за хедер и панелью задач</p>
-                <img  alt="Image 4" class="image">
-            </div>
+                <div class="image-placeholder">
+                    <p class="image-description">Безрамочное окно с
+                        перетаскиванием <br> за хедер и панелью задач</p>
+                    <img alt="Image 4" class="image">
+                </div>
 
-            <div class="image-placeholder">
-                <p class="image-description">Стандартный полноэкранный режим без <br> перетаскивания</p>
-                <img  alt="Image 5" class="image">
-            </div>
+                <div class="image-placeholder">
+                    <p class="image-description">Стандартный полноэкранный режим
+                        без <br> перетаскивания</p>
+                    <img alt="Image 5" class="image">
+                </div>
 
-            <div class="brand-name">
-                <span >NETMAX</span>
-                <span>Tvsoft Entertainment Network</span>
+                <div class="brand-name">
+                    <span>NETMAX</span>
+                    <span>Tvsoft Entertainment Network</span>
+                </div>
+
             </div>
-            
         </div>
     </div>
 </div>
