Отменил для кнопки "Авторизоваться"

--- a/assets/tamplates/modals/winStateModal/modal.html
+++ b/assets/tamplates/modals/winStateModal/modal.html
@@ -1,7 +1,7 @@
 <!-- modal.html -->
 <div class="overlay">
     <div id="WinStateModal" style="display: none;">
-        <div class="modal-content">
+        <div class="modal-content-electron">
             <span class="close-btn">&times;</span>
             <div class="image-grid">
 
